# Task

./: README.md  dockerfile  logger.py  main.py  pyproject.toml  test_main.py  ui.py
notebook/: task.ipynb
