[project]
name = "task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pydantic>=2.11.10",
    "pylint>=3.3.9",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
